# openapi-editor

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  Taskfile.yml  devenv.nix  example-spec.yaml  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.flatpak-builder/checksums/: x86_64-dev.brunopaz.openapi-editor.yml
.github/: labels.yml  release-drafter-config.yml
.github/workflows/: ci.yml  flatpak.yml  labels-sync.yml  release.yml
docs/: README.md
docs/architecture/: overview.md  state-management.md  yaml-engine.md
docs/features/: file-io.md  tree-navigation.md  undo-redo.md  validation.md
flatpak/: com.bruno.openapi-editor.desktop  com.bruno.openapi-editor.metainfo.xml  com.bruno.openapi-editor.yml  dev.brunopaz.openapi-editor.desktop  dev.brunopaz.openapi-editor.metainfo.xml  dev.brunopaz.openapi-editor.yml
scripts/: set-release-version-flatpak.mjs  set-release-version-tauri.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/tree/: SpecTree.tsx  (+2 more)
src/hooks/: useCloseHandler.ts  useKeyboardShortcuts.ts  useTheme.ts  useValidation.ts  useWindowTitle.ts
src/lib/: recent-files.ts  ref-resolver.test.ts  ref-resolver.ts  spec-template.ts  tree-builder.test.ts  tree-builder.ts  validator.test.ts  validator.ts  yaml-engine.test.ts  yaml-engine.ts
src/store/: app-store.ts  spec-store.test.ts  spec-store.ts
src/styles/: globals.css
src/types/: editor.test.ts  editor.ts  tree.ts  validation.ts
(+40 files in other folders)
