[package]
name = "openapi-editor"
version = "0.1.6"
description = "OpenAPI 3.1 Visual Editor"
authors = ["bruno"]
edition = "2021"

[lib]
name = "openapi_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

